[package]
name = "relay-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
async-std = "1.6.5"
async-trait = "0.1.40"
backoff = "0.2"
isahc = "1.2"
env_logger = "0.8.2"
futures = "0.3.5"
jsonpath_lib = "0.2"
log = "0.4.11"
num-traits = "0.2"
serde_json = "1.0"
sysinfo = "0.15"
time = { version = "0.3", features = ["formatting", "local-offset", "std"] }
tokio = { version = "1.8", features = ["rt"] }
thiserror = "1.0.26"


bp-runtime = { path = "../../primitives_bridge/runtime" }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../utils/prometheus" }