[package]
name = "pallet-xcm-benchmarks"
edition = "2021"
version = "0.9.41"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { path="../../frame/support", default-features = false }
frame-system = { path="../../frame/system", default-features = false }
sp-runtime = { path="../../primitives/runtime",default-features = false }
sp-std = { path="../../primitives/std", default-features = false }
sp-io = { path="../../primitives/io", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
frame-benchmarking = {  path="../../frame/benchmarking",  default-features = false }
xcm = { path = "..", default-features = false }

xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }
log = "0.4.17"

[dev-dependencies]
pallet-balances = { path="../../frame/balances" }
pallet-assets = {  path="../../frame/assets" }
sp-core = {path = "../../primitives/core" }
sp-tracing = { path = "../../primitives/tracing" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
# westend-runtime = { path = "../../runtime/westend", features = ["runtime-benchmarks"] }
polkadot-primitives = { path="../../xcm-primitives", default-features = false}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm-executor/std"
]
runtime-benchmarks = [
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
