[package]
name = "pallet-xcm"
edition = "2021"
# repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.36"


[dependencies]
bounded-collections = { version = "0.1.5", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

frame-benchmarking = {  path="../../frame/benchmarking",  default-features = false, optional = true }
frame-support = { path="../../frame/support", default-features = false }
frame-system = { path="../../frame/system", default-features = false }
sp-core = { path="../../primitives/core", default-features = false }
sp-io = { path="../../primitives/io", default-features = false }
sp-runtime = { path="../../primitives/runtime",default-features = false }
sp-std = { path="../../primitives/std", default-features = false }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { path="../../frame/balances" }
polkadot-runtime-parachains = { path="../../bin/parachains"  }
polkadot-parachain = { path="../../parachain", default-features = false }
xcm-builder = { path="../xcm-builder", default-features = false }

[features]
default = ["std"]
std = [
	"bounded-collections/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
